--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,8 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #ffffff;
-    --foreground: #ededed;
+    --foreground: #171717;
+    
   }
 }
 
